test/classes/delete-free/lifetimes/bad-global-borrows-block.good
bad-global-borrows-block.chpl:7: error: Scoped variable globalBorrow would outlive the value it is set to
bad-global-borrows-block.chpl:6: note: consider scope of myOwned
